# rust_copier

./: .gitignore  Cargo.toml  README.md  Shakefile.hs  flake.nix
.cargo/: config
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3yr6366gwm6z8dfyc9llha9qkjlij4r4-source  7iva09sshy0pgd02yrf1x406d0srfwyz-source  ix9fpjwr3v5nvqj41sas6rwwybhhahvj-source  qyyw6dd6lqlhz3cqap31d071cbyh34bf-source  rlg1w7amj1rqy02qwl6bw4qvwddga6ix-source  rrm20pb8g1np1mgb5yj021vw3b1fnwrs-source  w2lvd9nanmw29gi18sgvw80z2m2h0l40-source
src/: kmalloc.rs  lib.rs
src/arch/: mod.rs
src/arch/riscv/: cpu.rs
src/drivers/uart/: dw8250.rs  mod.rs
src/mem/: mod.rs  paging.rs
src/plat/: mod.rs
src/plat/visionfive2/: board.ld  mod.rs
src/plat/visionfive2/asm/: boot.s
