[package]
name = "mukernel"
version = "0.1.0"
authors = ["Isitha Subasinghe"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[profile.dev]
panic="abort"

[profile.release]
panic="abort"

[features]
default = ["visionfive2"]
visionfive2 = []

[dependencies]
buddy_system_allocator = {version = "0.9.0"}
derive_more = "0.99.17"
libos = { git="https://github.com/isubasinghe/libos.git" }
